# agent-sandbox

./: .agent-sandbox.toml.example  .gitignore  AGENTS.md  README.md  agent-sandbox.toml  install  opencode.sample.json  pyproject.toml  test-sandbox.sh
.devcontainer/: Dockerfile  devcontainer.json
src/agent_sandbox/: __init__.py  cli.py  config.py  docker.py  git.py  init.py  manager.py  utils.py
testproject/: Dockerfile.dev  docker-compose.yml  pyproject.toml
testproject/.devcontainer/: devcontainer.json
testproject/src/testproject/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_docker.py  test_git.py  test_init.py  test_manager.py  test_utils.py
tests/e2e/: __init__.py  conftest.py  test_workflow.py
