[project]
name = "testproject"
version = "0.1.0"
description = "Minimal FastAPI app for testing agent-sandbox"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testproject"]
